<resources>
    <string name="app_name">Time Tracking</string>
    <string name="button_start">Start Your Day</string>
    <string name="button_settings">Settings</string>
    <string name="button_exit">Exit</string>
    <string name="button_add">+</string>
    <string name="button_pause">||</string>
    <string name="button_end">End Day</string>
    <string name="button_done">Done</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_naming">Client Name</string>
    <string name="button_note">Add Note</string>
</resources>
