<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="test.erics.timetracking.TimeTrackingActivity">

    <ListView
        android:id="@+id/client_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/action_btn_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="#eeeeee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="88dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_states"
            android:onClick="addClient"
            android:text="@string/button_add"
            android:textColor="#f5f5f5"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="88dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_states"
            android:onClick="pauseTracking"
            android:text="@string/button_pause"
            android:textColor="#f5f5f5"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btn_end"
            app:layout_constraintRight_toLeftOf="@+id/btn_add"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_end"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btndesign2"
            android:onClick="endDay"
            android:text="@string/button_end"
            android:textColor="#f5f5f5"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/namePopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cc969696"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/client_name_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/text_naming"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="cancelNaming"
            android:text="@string/button_cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/done_naming_btn"
            app:layout_constraintRight_toRightOf="@+id/client_name_text" />

        <Button
            android:id="@+id/done_naming_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:onClick="doneNaming"
            android:text="@string/button_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/client_name_text"
            app:layout_constraintTop_toBottomOf="@+id/client_name_text" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
